// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/createBlock.ts Embed-default 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "payload": Object {
    "src": "",
  },
  "type": "Embed",
}
`;

exports[`utils/createBlock.ts Embed-extend 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "payload": Object {
    "src": "",
  },
  "type": "Embed",
}
`;

exports[`utils/createBlock.ts Heading-default 1`] = `
Object {
  "children": Array [
    Object {
      "payload": Object {
        "body": "",
      },
      "type": "Text",
    },
  ],
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "payload": Object {
    "size": "h2",
  },
  "type": "Heading",
}
`;

exports[`utils/createBlock.ts Heading-extend 1`] = `
Object {
  "children": Array [
    Object {
      "payload": Object {
        "body": "",
      },
      "type": "Text",
    },
  ],
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "payload": Object {
    "size": "h2",
  },
  "type": "Heading",
}
`;

exports[`utils/createBlock.ts Image-default 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "payload": Object {
    "align": "center",
    "caption": "",
    "src": "",
  },
  "type": "Image",
}
`;

exports[`utils/createBlock.ts Image-extend 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "payload": Object {
    "align": "center",
    "caption": "",
    "src": "",
  },
  "type": "Image",
}
`;

exports[`utils/createBlock.ts Paragraph-default 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "payload": Object {
    "body": <p></p>,
  },
  "type": "Paragraph",
}
`;

exports[`utils/createBlock.ts Paragraph-extend 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "payload": Object {
    "body": <p></p>,
  },
  "type": "Paragraph",
}
`;

exports[`utils/createBlock.ts Quote-default 1`] = `
Object {
  "children": Array [
    Object {
      "payload": Object {
        "body": "",
      },
      "type": "Text",
    },
  ],
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "type": "Quote",
}
`;

exports[`utils/createBlock.ts Quote-extend 1`] = `
Object {
  "children": Array [
    Object {
      "payload": Object {
        "body": "",
      },
      "type": "Text",
    },
  ],
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "type": "Quote",
}
`;

exports[`utils/createBlock.ts Rule-default 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "type": "Rule",
}
`;

exports[`utils/createBlock.ts Rule-extend 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "type": "Rule",
}
`;

exports[`utils/createBlock.ts Text-default 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
}
`;

exports[`utils/createBlock.ts Text-extend 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
}
`;
